--- a/play.html
+++ b/play.html
@@ -24,7 +24,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     <script src="MainQuad.js"></script>
-    <script src="Main_out.js"></script>
+    <script src="Main_Out.js"></script>
     <script type="text/javascript" src="cookies.js"></script>
     <script src="https://kit.fontawesome.com/fef8b917d2.js" crossorigin="anonymous"></script><style media="all" id="fa-v4-font-face">/*!
  * Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com
